# instant-epp

./: Cargo.toml  README.md  deny.toml
.github/workflows/: rust.yml
src/: client.rs  common.rs  connect.rs  connection.rs  dangerous.rs  error.rs  hello.rs  lib.rs  login.rs  logout.rs  poll.rs  request.rs  response.rs  xml.rs
src/contact/: check.rs  create.rs  delete.rs  info.rs  mod.rs  update.rs
src/domain/: check.rs  create.rs  delete.rs  info.rs  mod.rs  renew.rs  transfer.rs  update.rs
src/extensions/: change_poll.rs  consolidate.rs  low_balance.rs  namestore.rs  secdns.rs
src/extensions/fee/: duration.rs  mod.rs
src/extensions/frnic/: contact.rs  mod.rs
src/extensions/rgp/: mod.rs  poll.rs  report.rs  request.rs
src/host/: check.rs  create.rs  delete.rs  info.rs  mod.rs  update.rs
src/message/: ack.rs  poll.rs
src/tests/: mod.rs
tests/: basic.rs  chunked_read.rs
tests/resources/request/: login_no_extension.xml
tests/resources/request/contact/: create_minimal.xml  update.xml
tests/resources/request/domain/: update.xml
tests/resources/request/extensions/: frnic_create_contact_company.xml  frnic_create_contact_natural_person.xml  frnic_create_contact_non_profit.xml  frnic_create_contact_siren.xml  rgp_restore_request.xml  secdns_create_ds.xml  secdns_create_ds_key.xml  secdns_create_key.xml  secdns_update_add_ds_rem_ds.xml  secdns_update_chg.xml  secdns_update_rem_all_urgent.xml  secdns_update_rem_ks_add_ks_chg.xml
tests/resources/request/extensions/fee/: check.xml  create.xml  delete.xml  renew.xml  transfer_query.xml  transfer_request.xml  update.xml
tests/resources/request/host/: update.xml
tests/resources/request/poll/: ack.xml  poll.xml
tests/resources/response/: error_ext.xml  error_value_attrs.xml  poll_unhandled_namespace.xml
tests/resources/response/contact/: info_minimal.xml
tests/resources/response/domain/: check.xml  info_unhandled_namespace.xml
tests/resources/response/extensions/: secdns_info_ds.xml  secdns_info_key.xml
tests/resources/response/extensions/change_poll/: autopurge_before.xml  custom_sync_after.xml  delete_before.xml  update_after.xml  urs_lock_after.xml  urs_lock_before.xml
tests/resources/response/extensions/fee/: check.xml  create.xml  delete.xml  renew.xml  transfer_query.xml  transfer_request.xml  update.xml
tests/resources/response/poll/: poll_rgp_restore.xml
