[package]
name = "instant-epp"
version = "0.5.0"
edition = "2021"
rust-version = "1.70"
license = "MIT"
description = "EPP client library for async Rust"
repository = "https://github.com/instant-labs/instant-epp"

[features]
default = ["rustls"]
rustls = ["tokio-rustls", "rustls-pki-types", "rustls-native-certs"]

[dependencies]
async-trait = "0.1.52"
celes = "2.1"
chrono = { version = "0.4.23", features = ["serde"] }
instant-xml = { version = "0.5", features = ["chrono"] }
rustls-native-certs = { version = "0.8", optional = true }
rustls-pki-types = { version = "1", optional = true }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["io-util", "net", "time"] }
tokio-rustls = { version = "0.26", optional = true, default-features = false, features = ["logging", "ring", "tls12"] }
tracing = "0.1.29"

[dev-dependencies]
regex = "1.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"
tracing-subscriber = "0.3.3"
similar-asserts = "1.4.2"
